--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,6 @@ jobs:
     - name: Test with pytest
       run: |
         coverage run -m pytest
+    - name: coverage report
+      run: |
+        coverage report
